--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,12 @@
 
 :root{
     --primary: #fe2c55;
+    --height-header: 60px;
+    --text-color: #333;
+    --white: #fff;
+    --black: #000;
+    
+    --width-content-layout: 1150px;
 }
 html{
     font-size: 62.5%;
@@ -10,6 +16,8 @@ html{
 }
 *{
     box-sizing: border-box;
+    padding: 0 ;
+    margin: 0 ;
 }
 body{
     font-family: 'Montserrat', sans-serif;
@@ -17,4 +25,14 @@ body{
     line-height: 1.5;
     // Tối ưu để hiển thị font size nhanh nhất
     text-rendering: optimizeLegibility;
+}
+
+input,button,[tabindex]{
+    outline: none;
+    border: none;
+}
+
+a[href]{
+    text-decoration: none;
+    color: var(--text-color);
 }
