--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,106 +18,25 @@
     justify-content: space-between;
 }
 
-.search-results,.search{
-    width: var(--search-width);
-}
-.search-title{
-    padding: 6px 15px;
-}
-.search{
-    background-color:#f1f1f2;
-    height: 46px;
-    display: flex;
-    justify-content: space-between;
-    border-radius: var( --search-border-radius);
-    position: relative;
-    border: 1px solid transparent;
-    font-size: 1.5rem;
-
-    //Khi kích chuột vào input hiển thị border
-    &:focus-within{
-        border: 1px solid rgba(22, 24, 35, 0.06);
-    }
-
-
-    input{
-        flex: 1;
-        background-color: transparent;
-        height: 100%;
-        width: 100%;
-        margin-left: 16px;
-        
-        // Đổi màu dấu nháy
-        caret-color: var(--primary);
-    }
-
-
-    // Gõ vào input đổi màu search
-    input:not(:placeholder-shown) ~ .search-btn{
-        color: rgba(22, 24, 35, 0.75);
-    }
-
-    .close,.loading{
-        color: var(--color-border-search);
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        right: calc(var(--search-button-width) + 12px);
-    }
-
-
-    .search-btn{
-        width: var(--search-button-width);
-        height: 100%;
-        border-top-right-radius: var(--search-border-radius);
-        border-bottom-right-radius: var(--search-border-radius);
-        font-size: 2rem;
-        position: relative;
-        color: var(--color-border-search);
-
-        
-        &:hover{
-            cursor: pointer;
-            background: rgba(22, 24, 35, 0.03);
-        }
-
-        &::after{
-            position: absolute;
-            display: block;
-            width: 1px;
-            background-color: rgba(22, 24, 35, 0.12);
-            height: 55%;
-            top: 50%;
-            transform: translateY(-50%);
-            content: "";
-            left: 0;
-        }
-
-        &:active{
-            background-color: rgba(22, 24, 35, 0.06);
-        }
-    }
-   
-}
 
 
 .action{
+    display: flex;
+    align-items: center;
 
     .upload{
         border-radius: 0;
         margin-right: 9px;
-        padding-left: 16px;
-        padding-right: 19px;
+        padding: 6px 19px 6px 16px;
         color: var(--black);
         font-weight: 600;
-    
+        font-size: 1.6rem;
         .plus{
             margin-right: 3px;
-            font-weight: 300;
         }
     
     }
-
+    
     .more-btn {
         background-color: transparent;
         display: inline-block;
@@ -126,4 +45,20 @@
         font-size: 2rem;
         cursor: pointer;
     }
+}
+
+.action-btn{
+    font-size: 2.2rem;
+    color: #161823;
+    background-color: transparent;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+
+.user-avatar{
+   width: 35px;
+   height: 35px;
+   border-radius: 50%;
+   cursor: pointer;
+   margin-left: 13px;
 }
