--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,10 +10,13 @@
     font-size : 1.5rem;
     font-weight: 500;
     color: var(--text-color);
-    padding: 4px 0 4px 16px;
+    padding: 10px 0 10px 16px;
     width: 100%;
 
-    
+    &.separate{
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
+
     &:hover{
         background-color: rgba(22, 24, 35, 0.03);
         border-radius: 0;
