edit search part 1

--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    padding-left: 15px;
+    padding: 7px 12px 7px 15px;
     
     &:hover{
         background: rgba(22, 24, 35, 0.03);
@@ -20,7 +20,7 @@
 .infor{
     display: flex;
     flex-direction: column;
-    padding: 7px 12px;
+    padding-left: 12px;
 }
 
 .name{
