--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,6 +5,7 @@
     min-width: 100px;
     padding: 9px 6px;
     border-radius: 4px;
+    font-family: var(--font-family);
     font-size: 1.5rem;
     font-weight: 700;
     cursor: pointer;
@@ -13,6 +14,7 @@
     user-select: none;
 
     +.wrapper{
+        display: inline-flex;
     }
 
     &.disabled{
@@ -25,6 +27,8 @@
 .title + .icon{
     margin-left: 8px;
 }
+
+
 // Button type
 
 .rounded{
